--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="김진욱의 포트폴리오 사이트">
+        <meta name="keywords" content="포트폴리오, 웹디자인, 웹개발">
+        <meta name="author" content="김진욱">
+        <meta property="og:image" content="/.png">
+        <title>RWD</title>
+        <link rel="stylesheet" href="index.css">
+        <script src="index.js"></script>
+    </head>
+    <body>
+        <div class="wrapper">
+            <div>
+                
+            </div>
+        </div>
+    </body>
+    <aside>
 
+    </aside>
+</html>
