--- a/index.html
+++ b/index.html
@@ -7,17 +7,55 @@
         <meta name="author" content="김진욱">
         <meta property="og:image" content="/.png">
         <title>RWD</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="style/global.css">
+        <link rel="stylesheet" href="style/main.css">
         <script src="index.js"></script>
     </head>
     <body>
-        <div class="wrapper">
-            <div>
-                
+        <div class="main">
+            <div id="~full">
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
             </div>
+            <main>
+                <h1>RWD-VIM-LOAADING</h1>
+                <p>Version 0.0.1</p>
+                <p>Idea by Astro</p>
+                <br></br>
+                <p>Type -h <span>Enter</span> to see the list of commands</p>
+                <p></p>
+            </main>
+        </div>
+        <div id="command-line">
+            <p>Type text</p>
         </div>
     </body>
-    <aside>
-
-    </aside>
 </html>
