--- a/index.html
+++ b/index.html
@@ -13,7 +13,53 @@
     </head>
     <body>
         <div class="main">
-            <div id="~full">
+            <div id="h_full">
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
+                <div>~</div>
                 <div>~</div>
                 <div>~</div>
                 <div>~</div>
@@ -49,9 +95,11 @@
                 <h1>RWD-VIM-LOAADING</h1>
                 <p>Version 0.0.1</p>
                 <p>Idea by Astro</p>
-                <br></br>
+                <br>
                 <p>Type -h <span>Enter</span> to see the list of commands</p>
-                <p></p>
+                <p>Type -c <span>Enter</span> to clear the screen</p>
+                <p>Type -a <span>Enter</span> to see the about page</p>
+                <p>Type -p <span>Enter</span> to see the projects page</p>
             </main>
         </div>
         <div id="command-line">
